workspace = { members = ["threes-ai-mc"] }
[package]
name = "threes"
description = "A Threes! implementation in Rust"
repository = "https://github.com/NitrOP7674/threes"
version = "0.3.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
rand_pcg = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"

[features]
